fixed detailed views, fixed styling for card overflow

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,7 +90,6 @@ p, label, button {
 
 #hamburger-container > #hamburger-icon {
     display: none;
-    margin: 0.5em;
     width: 2em;
     height: 2em;
 }
@@ -217,7 +216,7 @@ p, label, button {
     justify-content: center;
     align-items: center;
     width: 22em;
-    height: 45em;
+    height: 40em;
     margin: 1em;
     padding: 0.5em;
     background: #e6e6e6;
